<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/id_home" android:title="@string/action_home"
        app:showAsAction="never"/>
    <item android:id="@+id/id_carrito" android:title="@string/action_carrito"
         app:showAsAction="never"/>
    <item android:id="@+id/id_ordenes" android:title="@string/action_ordenes"
    app:showAsAction="never"/>
    <item android:id="@+id/id_vehiculos" android:title="@string/action_vehiculos"
        app:showAsAction="never"/>
    <item android:id="@+id/id_chassis" android:title="@string/action_chassis"
        app:showAsAction="never"/>
    <item android:id="@+id/id_logout" android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>